# hol-guard

./: .gitattributes  .gitignore  .pr-body.md  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  analyze_hermes.py  analyze_risks.py  analyze_risks2.py  docker-requirements.txt  hol-guard-changes.md  pr-body.md  pyproject.toml  test_edge_cases.py  todo-update.md
.clusterfuzzlite/: Dockerfile
.factory/droids/: hol-guard-runner.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/pr-bodies/: claude-permission-request-visible.md
.github/workflows/: ci.yml  codeql.yml  create-python-release.yml  dependabot-uv-lock.yml  devcontainer-features.yml  e2e-test.yml  fuzz.yml  harness-smoke.yml  mdm-artifacts.yml  mdm-local-lab.yml  publish-action-repo.yml  publish-alpha.yml  publish.yml  scorecard.yml  security-gates.yml
action/: CONTRIBUTING.md  README.legacy.md  README.md  SECURITY.md  action.yml  scanner-sha256.txt
dashboard/: index.html  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.installed.config.ts  pnpm-lock.yaml  vite.config.ts
dashboard/e2e/: approval-scope-ui.spec.ts  command-activity-ui.spec.ts  fixture-states.ts  installed-command-activity.spec.ts  policy-cloud-exceptions-states.spec.ts  proof-dir.ts  protection-health-ui.spec.ts  scrg172-states.spec.ts  settings-chunk-runtime.spec.ts  static-server.mjs
dashboard/src/: app-activity-evidence.test.ts  app-detail-phase11.test.ts  app-detail-workspace.test.ts  app-routing.test.ts  app.tsx  approval-center-layout.test.ts  approval-center-layout.tsx  approval-center-mobile.test.ts  approval-center-primitives.tsx  approval-center-review-cards.tsx  approval-center-utils.ts  approval-gate-utils.ts  approval-gate.test.ts  approval-proof-inline.tsx  approval-proof-modal.tsx  approval-scopes.test.ts  approval-scopes.ts  audit-run-progress.tsx  audit-workspace.tsx  authoritative-action-surfaces.test.tsx  clear-policy-payload.test.ts  clear-policy-payload.ts  cloud-user-menu.tsx  compare-time-periods.tsx  consolidated-evidence-alert.test.ts  consolidated-evidence-alert.tsx  data-flow-evidence-card.tsx  error-boundary.tsx  extension-controls-api.ts  extensions-workspace.test.ts  extensions-workspace.tsx  feed-health-workspace.tsx  fleet-protection-recovery.tsx  fleet-workspace-phase11.test.ts  fleet-workspace.test.ts  fleet-workspace.tsx  github-issue-link.test.ts  github-issue-link.ts  guard-action.test.ts  guard-action.ts  (+180 more)
devcontainer-features/hol-guard/: README.md  devcontainer-feature.json  install.sh
docs/: codex-spec-alignment-todo.md  github-action-marketplace.md  guard-review-backend-contract.md  prd-v2-codex-spec-alignment.md
docs/guard/: SKILL.md  all-harness-hook-review.md  approval-audit.md  architecture.md  cloud-command-capability.md  command-activity-dashboard-ia.md  command-activity-privacy.md  command-backup-extension-coverage.md  command-cicd-platform-extension-coverage.md  command-cloud-extension-coverage.md  command-database-extension-coverage.md  command-domain-extension-coverage.md  command-extension-architecture.md  command-extension-precedence.md  command-extension-threat-model.md  command-managed-service-extension-coverage.md  command-package-extension-coverage.md  command-remote-extension-coverage.md  command-search-messaging-extension-coverage.md  command-storage-extension-coverage.md  cursor-local-cloud-contract.md  enterprise-event-taxonomy.md  enterprise-export-examples.md  enterprise-packet.md  get-started.md  github-command-capability-security.md  grok-executable-security.md  harness-support.md  hook-review-engine.md  incident-response.md  local-vs-cloud.md  mdm-adapter-contract.md  mdm-compatibility-prd.md  mdm-compatibility-todo.md  mdm-deployment.md  mdm-endpoints.v1.json  mdm-general-availability-roadmap.md  mdm-local-testing.md  mdm-networking.md  mdm-release-evidence-template.md  (+19 more)
proof/guard-controls-reset/: hgc076-hgc090-local-apply-path-proof.md  hgc087-hgc100-local-closeout.md
release-metadata/: release-22-installed-evidence.json
schemas/: plugin-quality.v1.json  scan-result.v1.json  verify-result.v1.json
scripts/: bench_guard_hooks.py  check_privileged_workflows.py  codex-auto-resume-smoke.py  compute_alpha_release_version.py  compute_main_release_version.py  e2e-cursor-hook-smoke.py  emit_supply_chain_daemon_for_browser_proof.py  installed_canary_proof.py  release_registry_types.py  run-cloud-exception-sync-proof.sh  run-policy-cloud-exceptions-release-audit.sh  run_installed_canary.py  run_supply_chain_local_runtime_proof.py  sync_repo_version.py  update_awesome_codex_plugins_contributing.py  validate_alpha_release.py  verify_release_registry.py  write_release_toolchain_sbom.py
scripts/ci/: pytest_shard.py
scripts/mdm/: Dockerfile.local-lab  (+6 more)
tests/: bundle_first_cloud.py  cloud_exception_bundle_fixtures.py  conftest.py  e2e_droid_exec.py  guard_command_activity_api_support.py  guard_command_corpus.py  guard_command_corpus_oracle.py  guard_command_corpus_oracle_adversarial.py  guard_command_corpus_oracle_benign.py  guard_command_corpus_oracle_loader.py  guard_command_corpus_oracle_types.py  guard_command_corpus_runner.py  guard_command_decision_diff.py  guard_command_decision_diff_runner.py  guard_mdm_health_lease_support.py  guard_python_phase12_support.py  guard_review_signing_helpers.py  guard_tier2_phase13_support.py  openclaw_test_support.py  policy_bundle_signing_helpers.py  shim_execution_helpers.py  skill_directory_identity_test_support.py  test-trust-scoring.py  test_action_bundle.py  test_action_runner.py  test_adal_adapter.py  test_adal_hooks.py  test_aibom_chunking.py  test_alpha_container_workflow.py  test_antigravity_adapter.py  test_ci_pytest_shard.py  test_ci_windows_updater.py  test_cisco_install_surfaces.py  test_claude_daemon_hook_bridge.py  test_cli.py  test_cli_hook_source_ref.py  test_cloud_exception_requests.py  test_cloud_exception_sync_proof.py  test_cloud_local_identity.py  test_codex_daemon_hook_bridge.py  (+509 more)
(+941 files in other folders)
