[build-system]
requires = ["hatchling<1.31"]
build-backend = "hatchling.build"

[project]
name = "hol-guard"
version = "2.0.992"
description = "Protect local AI harnesses with HOL Guard and run scanner checks for Codex, Claude, Cursor, Gemini, OpenCode, and Pi."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "HOL", email = "support@hol.org" },
]
keywords = ["plugin", "scanner", "security", "mcp", "cli", "codex", "claude", "gemini", "opencode", "pi", "ecosystem"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=14.0,<15",
    "cryptography>=49.0.0",
    "keyring>=25.0",
    "packaging>=24.0",
    "requests>=2.32,<3",
    "tomli>=2.0; python_version < '3.11'",
    "cisco-ai-skill-scanner~=2.0.11; python_version < '3.14'",
]

[project.optional-dependencies]
cisco = [
    "litellm==1.89.1; python_version >= '3.11' and python_version < '3.14'",
]
dev = [
    "basedpyright>=1.39.8",
    "build>=1.5.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
publish = [
    "twine>=6.2.0",
]

[dependency-groups]
cisco-mcp = [
    "cisco-ai-mcp-scanner==4.7.3; python_version >= '3.11' and python_version < '3.14'",
]

[tool.uv]
override-dependencies = [
    "aiohttp==3.14.1",
    "click==8.4.1",
    "cisco-ai-skill-scanner==2.0.11",
    "fastapi==0.137.1",
    "importlib-metadata==9.0.0",
    "jsonschema==4.26.0",
    "litellm==1.89.1",
    "openai==2.41.1",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "starlette==1.3.1",
    "tokenizers==0.23.1",
    "urllib3==2.7.0",
]

[project.scripts]
hol-guard = "codex_plugin_scanner.cli:main"
plugin-scanner = "codex_plugin_scanner.cli:main"
plugin-guard = "codex_plugin_scanner.cli:main"
plugin-ecosystem-scanner = "codex_plugin_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/hashgraph-online/hol-guard"
Repository = "https://github.com/hashgraph-online/hol-guard"
Issues = "https://github.com/hashgraph-online/hol-guard/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/codex_plugin_scanner"]

[tool.hatch.build]
artifacts = ["src/codex_plugin_scanner/guard/daemon/static/**"]
exclude = [
    ".guard-live/**",
    ".guard-package-venv/**",
    ".guard-e2e/**",
    ".guard-e2e-prod/**",
    ".guard-e2e-prod2/**",
    ".guard-prod-venv/**",
    ".guard-prod-venv-fresh/**",
    "dashboard/node_modules/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/mcp-canary-server.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-m", "not slow"]
markers = [
  "slow: marks tests as slow (deselected by default; run with -m slow to include)",
]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.10"
failOnWarnings = false
