[build-system]
requires = ["hatchling<1.31"]
build-backend = "hatchling.build"

[project]
name = "hol-guard"
version = "2.0.1077"
description = "Open-source antivirus and runtime protection for AI agents, tools, MCP servers, plugins, skills, and package installs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "HOL", email = "support@hol.org" },
]
keywords = [
    "ai antivirus",
    "ai agent security",
    "ai agents",
    "runtime security",
    "mcp security",
    "supply chain security",
    "prompt injection",
    "secrets detection",
    "plugin security",
    "cli",
    "codex",
    "claude",
    "cursor",
    "gemini",
    "opencode",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=14.0,<15",
    "cryptography>=49.0.0",
    "keyring>=25.0",
    "packaging>=24.0",
    "requests>=2.32,<3",
    "tomli>=2.0; python_version < '3.11'",
    "cisco-ai-skill-scanner~=2.0.11; python_version < '3.14'",
    "mcp>=1.27.0,<2; python_version >= '3.10'",
]

[project.optional-dependencies]
cisco = [
    "litellm==1.91.3; python_version >= '3.11' and python_version < '3.14'",
]
dev = [
    "basedpyright>=1.39.8",
    "build>=1.5.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
publish = [
    "twine>=6.2.0",
]

[dependency-groups]
cisco-mcp = [
    "cisco-ai-mcp-scanner==4.7.3; python_version >= '3.11' and python_version < '3.14'",
]

[tool.uv]
override-dependencies = [
    "aiohttp==3.14.1",
    "click==8.4.1",
    "cisco-ai-skill-scanner==2.0.11",
    "fastapi==0.137.1",
    "importlib-metadata==9.0.0",
    "jsonschema==4.26.0",
    "litellm==1.91.3",
    "openai==2.41.1",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "starlette==1.3.1",
    "tokenizers==0.23.1",
    "urllib3==2.7.0",
]

[project.scripts]
hol-guard = "codex_plugin_scanner.cli:main"
plugin-scanner = "codex_plugin_scanner.cli:main"
plugin-guard = "codex_plugin_scanner.cli:main"
plugin-ecosystem-scanner = "codex_plugin_scanner.cli:main"

[project.urls]
Homepage = "https://hol.org/guard"
Documentation = "https://github.com/hashgraph-online/hol-guard/tree/main/docs/guard"
Repository = "https://github.com/hashgraph-online/hol-guard"
Issues = "https://github.com/hashgraph-online/hol-guard/issues"
Changelog = "https://github.com/hashgraph-online/hol-guard/releases"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/codex_plugin_scanner"]

[tool.hatch.build]
artifacts = ["src/codex_plugin_scanner/guard/daemon/static/**"]
exclude = [
    ".guard-live/**",
    ".guard-package-venv/**",
    ".guard-e2e/**",
    ".guard-e2e-prod/**",
    ".guard-e2e-prod2/**",
    ".guard-prod-venv/**",
    ".guard-prod-venv-fresh/**",
    "dashboard/node_modules/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/mcp-canary-server.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-m", "not slow"]
markers = [
  "slow: marks tests as slow (deselected by default; run with -m slow to include)",
]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.10"
failOnWarnings = false
